ast/testdata/tests/errors/contracts/non_ascii_alphabet_contract_start.rql
contract 0() -> void {}
